--- a/0601/종훈.ipynb
+++ b/0601/종훈.ipynb
@@ -93,6 +93,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 내적"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(a, b):\n",
+    "    answer = 0\n",
+    "    for i in range(len(a)):\n",
+    "        answer += a[i] * b[i]\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 모의고사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(answers):\n",
+    "    a = [1, 2, 3, 4, 5] # 5\n",
+    "    b = [2, 1, 2, 3, 2, 4, 2, 5] # 8\n",
+    "    c = [3, 3, 1, 1, 2, 2, 4 ,4 ,5, 5] # 10\n",
+    "    supo = [a, b, c]\n",
+    "    \n",
+    "    score = []\n",
+    "    res = 0\n",
+    "    for i, j in enumerate(supo):\n",
+    "        l = len(j)\n",
+    "        max = 0\n",
+    "        for k in range(len(answers)):\n",
+    "            if answers[k] == j[k%l]:\n",
+    "                max += 1\n",
+    "        if max > res:\n",
+    "            res = max\n",
+    "        score.append((i+1, max))\n",
+    "    \n",
+    "    answer = []\n",
+    "    for i in range(len(score)):\n",
+    "        if score[i][1] == res:\n",
+    "            answer.append(score[i][0])\n",
+    "    \n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 폰켓몬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(nums):\n",
+    "    a = list(set(nums))\n",
+    "    if len(a) > (len(nums)//2):\n",
+    "        answer = len(nums)//2\n",
+    "    else:\n",
+    "        answer = len(a)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
