--- a/0622/0622sj.ipynb
+++ b/0622/0622sj.ipynb
@@ -306,7 +306,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    cnt = 0\n",
+    "    ch=[0]*(n+1)\n",
+    "    for i in range (2,n+1):\n",
+    "        if ch[i]==0:\n",
+    "            cnt+=1\n",
+    "        for j in range(i, n+1, i):\n",
+    "            ch[j]=1\n",
+    "    return cnt\n",
+    "\n",
+    "# 소수 만들기인데 효율성 있는거보고 에라토스테네스의 체임을 직감했다\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def solution(n):\n",
+    "    num=set(range(2,n+1))\n",
+    "    for i in range(2,n+1):\n",
+    "        if i in num:\n",
+    "            num-=set(range(2*i,n+1,i))\n",
+    "    return len(num)\n",
+    "\n",
+    "# set은 왜 쓰는걸까"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -320,7 +343,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    answer = '수박' * (n//2) if n % 2 == 0 else '수박' * (n//2) + '수'\n",
+    "    return answer\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "def water_melon(n):\n",
+    "    s = \"수박\" * n\n",
+    "    return s[:n]\n",
+    "# 길게 만들고 자르는 방법도 있군\n",
+    "\n",
+    "def water_melon(n):\n",
+    "    return \"수박\"*(n//2) + \"수\"*(n%2)\n",
+    "\n",
+    "# 뭔가 좀더 간단해진 풀이"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,7 +409,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(s, n):\n",
+    "    answer = ''\n",
+    "    for i in s:\n",
+    "        if i.islower() and ord(i)+n > 122:\n",
+    "            answer += chr(ord(i)+n-26)\n",
+    "        elif i.isupper() and ord(i)+n > 90:\n",
+    "            answer += chr(ord(i)+n-26)\n",
+    "        elif i.isalpha():\n",
+    "            answer += chr(ord(i)+n)\n",
+    "        else:\n",
+    "            answer += i\n",
+    "    return answer\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def caesar(s, n):\n",
+    "    s = list(s)\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i].isupper():\n",
+    "            s[i]=chr((ord(s[i])-ord('A')+ n)%26+ord('A'))\n",
+    "        elif s[i].islower():\n",
+    "            s[i]=chr((ord(s[i])-ord('a')+ n)%26+ord('a'))\n",
+    "\n",
+    "    return \"\".join(s)\n",
+    "\n",
+    "# 반성점\n",
+    "# % 활용!!!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,7 +451,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            sum += i\n",
+    "    return sum\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def sumDivisor(num):\n",
+    "    # num / 2 의 수들만 검사하면 성능 약 2배 향상잼\n",
+    "    return num + sum([i for i in range(1, (num // 2) + 1) if num % i == 0])\n",
+    "\n",
+    "# 반성점\n",
+    "# 1. 생각안하고 풀다가 약수는 //2 만해도 된다는걸 까먹음"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,7 +481,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(s):\n",
+    "    answer = ''\n",
+    "    cnt = 0\n",
+    "    for i in s:\n",
+    "        if cnt % 2 == 0 and i.islower():\n",
+    "            answer += i.upper()\n",
+    "            cnt += 1\n",
+    "        elif cnt % 2 == 1 and i.isupper():\n",
+    "            answer += i.lower()\n",
+    "            cnt += 1\n",
+    "        elif i.isalpha():\n",
+    "            answer += i\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            answer += i\n",
+    "            cnt = 0\n",
+    "    return answer\n",
+    "\n",
+    "# 뭔가 조잡한 풀이\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def toWeirdCase(s):\n",
+    "    return \" \".join(map(lambda x: \"\".join([a.lower() if i % 2 else a.upper() for i, a in enumerate(x)]), s.split(\" \")))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,7 +520,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    nSum=0\n",
+    "    while n >0:\n",
+    "        nSum+=n%10\n",
+    "        n=n//10\n",
+    "    return nSum\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def sum_digit(number):\n",
+    "    if number < 10:\n",
+    "        return number;\n",
+    "    return (number % 10) + sum_digit(number // 10)\n",
+    "\n",
+    "# 재귀함수!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,7 +576,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    answer=sorted([i for i in str(n)],reverse=True)\n",
+    "    return int(\"\".join(answer))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -467,7 +594,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    return ((n**0.5)+1)**2 if n%(n**0.5)==0 else -1\n",
+    "\n",
+    "# 좋아요 가장 많은 풀이\n",
+    "\n",
+    "def nextSqure(n):\n",
+    "    sqrt = n ** (1/2)\n",
+    "\n",
+    "    if sqrt % 1 == 0:\n",
+    "        return (sqrt + 1) ** 2\n",
+    "    return 'no'"
+   ]
   },
   {
    "cell_type": "markdown",
