last week missed

--- a/0701/0701_종훈.ipynb
+++ b/0701/0701_종훈.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "짝수와 홀수"
+    "# 짝수와 홀수"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "최대공약수와 최소공배수"
+    "# 최대공약수와 최소공배수\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "콜라츠 추측"
+    "# 콜라츠 추측\n"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "평균 구하기"
+    "# 평균 구하기\n"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "하샤드 수"
+    "# 하샤드 수\n"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "핸드폰 번호 가리기"
+    "# 핸드폰 번호 가리기\n"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "행렬의 덧셈"
+    "# 행렬의 덧셈\n"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "x만큼 간격이 있는 n개의 숫자"
+    "# x만큼 간격이 있는 n개의 숫자\n"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "직사각형 별찍기"
+    "# 직사각형 별찍기\n"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "짝지어 제거하기"
+    "# 짝지어 제거하기\n"
    ]
   },
   {
@@ -220,7 +220,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "기능개발"
+    "# 멀쩡한 사각형\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 오픈채팅방\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(record):\n",
+    "    dic = {}\n",
+    "    answer = []\n",
+    "    for re in record:\n",
+    "        x = re.split()\n",
+    "        if (x[0] == 'Enter') | (x[0] == 'Change'):\n",
+    "            dic[x[1]] = x[2]\n",
+    "    for re in record:\n",
+    "        x = re.split()\n",
+    "        if x[0] == 'Enter':\n",
+    "            answer.append(dic[x[1]] + '님이 들어왔습니다.')\n",
+    "        elif x[0] == 'Leave':\n",
+    "            answer.append(dic[x[1]] + '님이 나갔습니다.')\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 타겟 넘버\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DFS(i, sum, numbers, target):\n",
+    "    global cnt\n",
+    "    if i == len(numbers):\n",
+    "        if sum == target:\n",
+    "            cnt += 1\n",
+    "        return\n",
+    "    else:\n",
+    "        DFS(i+1, sum + numbers[i], numbers, target)\n",
+    "        DFS(i+1, sum - numbers[i], numbers, target)\n",
+    "        \n",
+    "cnt = 0        \n",
+    "def solution(numbers, target):\n",
+    "    DFS(0, 0, numbers, target)\n",
+    "    return cnt         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 124 나라의 숫자\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    answer = ''\n",
+    "    aa = ['1', '2', '4']\n",
+    "    while True:\n",
+    "        if n <= 3:\n",
+    "            answer += aa[n-1]\n",
+    "            break\n",
+    "        else:\n",
+    "            a = (n-1)%3\n",
+    "            n = (n-1)//3 \n",
+    "            answer += aa[a]\n",
+    "    answer = answer[::-1]\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 기능개발\n"
    ]
   },
   {
@@ -250,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "타겟 넘버"
+    "# 문자열 압축\n"
    ]
   },
   {
@@ -259,27 +353,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DFS(i, sum, numbers, target):\n",
-    "    global cnt\n",
-    "    if i == len(numbers):\n",
-    "        if sum == target:\n",
-    "            cnt += 1\n",
-    "        return\n",
-    "    else:\n",
-    "        DFS(i+1, sum + numbers[i], numbers, target)\n",
-    "        DFS(i+1, sum - numbers[i], numbers, target)\n",
-    "        \n",
-    "cnt = 0        \n",
-    "def solution(numbers, target):\n",
-    "    DFS(0, 0, numbers, target)\n",
-    "    return cnt         "
+    "def solution(s):\n",
+    "    answer = 21470000\n",
+    "    for i in range(1, len(s)//2 + 2):\n",
+    "        string = [s[j:j+i] for j in range(0, len(s), i)]\n",
+    "\n",
+    "        ans = ''\n",
+    "        cnt = 1\n",
+    "        for k in range(1, len(string)):\n",
+    "            if string[k-1] == string[k]:\n",
+    "                cnt += 1\n",
+    "            else:\n",
+    "                ans += (str(cnt)+string[k-1]) if cnt > 1 else string[k-1]\n",
+    "                cnt = 1\n",
+    "        ans += (str(cnt)+string[k-1]) if cnt > 1 else string[-1]\n",
+    "\n",
+    "        if len(ans) < answer:\n",
+    "            answer = len(ans)\n",
+    "\n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "124 나라의 숫자"
+    "# 더 맵게\n"
    ]
   },
   {
@@ -288,20 +387,234 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(n):\n",
-    "    answer = ''\n",
-    "    aa = ['1', '2', '4']\n",
+    "def solution(scoville, K):\n",
+    "    import heapq as hq\n",
+    "    hq.heapify(scoville)\n",
+    "    cnt = 0\n",
     "    while True:\n",
-    "        if n <= 3:\n",
-    "            answer += aa[n-1]\n",
+    "        if scoville[0] >= K:\n",
     "            break\n",
     "        else:\n",
-    "            a = (n-1)%3\n",
-    "            n = (n-1)//3 \n",
-    "            answer += aa[a]\n",
-    "    answer = answer[::-1]\n",
-    "    return answer"
+    "            if len(scoville) <= 1:\n",
+    "                cnt = -1\n",
+    "                break\n",
+    "            else:\n",
+    "                a = hq.heappop(scoville)\n",
+    "                b = hq.heappop(scoville)\n",
+    "                c = a + b*2\n",
+    "                hq.heappush(scoville, c)\n",
+    "                cnt += 1\n",
+    "    return cnt"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 소수 찾기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import permutations\n",
+    "def solution(numbers):\n",
+    "    lst = []\n",
+    "    for i in range(1, len(numbers)+1):\n",
+    "        lst.extend(list(permutations(numbers,i)))\n",
+    "    \n",
+    "    nums = []\n",
+    "    for i in range(len(lst)):\n",
+    "        num = int(''.join(lst[i]))\n",
+    "        nums.append(num)\n",
+    "    nums = list(set(nums))\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    for x in nums:\n",
+    "        if x > 1:\n",
+    "            for j in range(2, x//2 + 1):\n",
+    "                if x % j == 0:\n",
+    "                    break\n",
+    "            else:\n",
+    "                cnt += 1\n",
+    "    return cnt\n",
+    "\n",
+    "\n",
+    "# 다른사람의 풀이\n",
+    "\n",
+    "from itertools import permutations\n",
+    "def solution(n):\n",
+    "    a = set()\n",
+    "    for i in range(len(n)):\n",
+    "        a |= set(map(int, map(\"\".join, permutations(list(n), i + 1))))\n",
+    "    a -= set(range(0, 2))\n",
+    "    for i in range(2, int(max(a) ** 0.5) + 1):\n",
+    "        a -= set(range(i * 2, max(a) + 1, i))\n",
+    "    return len(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 게임 맵 최단거리\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "def solution(maps):\n",
+    "    n = len(maps)\n",
+    "    m = len(maps[0])\n",
+    "\n",
+    "    dis = [[0]*m for _ in range(n)]\n",
+    "\n",
+    "    dx = [-1, 0, 1, 0]\n",
+    "    dy = [0, 1, 0, -1]\n",
+    "\n",
+    "    Q = deque()\n",
+    "    maps[0][0] = 0\n",
+    "    Q.append((0, 0))\n",
+    "\n",
+    "    while Q: # Q가 비면 멈추도록\n",
+    "        tmp = Q.popleft()\n",
+    "        for i in range(4):\n",
+    "            x = tmp[0] + dx[i]\n",
+    "            y = tmp[1] + dy[i]\n",
+    "            if 0 <= x <= (n-1) and 0 <= y <= (m-1) and maps[x][y] == 1:\n",
+    "                maps[x][y] = 0 # 벽으로 만들어 버리기\n",
+    "                dis[x][y] = dis[tmp[0]][tmp[1]] + 1\n",
+    "                Q.append((x, y))\n",
+    "\n",
+    "    if dis[n-1][m-1] == 0:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return dis[n-1][m-1]+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [1차] 뉴스 클러스터링\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 가장 큰 수\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers):\n",
+    "    num = [(str(x), str(x)*3) for x in numbers]\n",
+    "    num.sort(key = lambda x : x[1], reverse = True)\n",
+    "    return str(int(''.join(map(lambda x : x[0], num))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 행렬 테두리 회전하기\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 괄호 변환\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 튜플\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "import re\n",
+    "def solution(s):\n",
+    "    ans = Counter(re.findall(\"\\d+\", s))\n",
+    "    ans = ans.most_common()\n",
+    "    ans.sort(key = lambda x:x[1], reverse = True)\n",
+    "    res = []\n",
+    "    for x in ans:\n",
+    "        res.append(int(x[0]))\n",
+    "    \n",
+    "    '''\n",
+    "    splited = s[2:-2].split(\"},{\")\n",
+    "    splited.sort(key = lambda x : len(x))\n",
+    "    ans = []\n",
+    "    for x in splited:\n",
+    "        ans = [(int(num) for num in x.split(\",\"))]\n",
+    "    ''' \n",
+    "    \n",
+    "    \n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 프린터\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 전화번호 목록"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 수식 최대화"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 메뉴 리뉴얼"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 예상 대진표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -320,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
