--- a/0715/0715_JH.ipynb
+++ b/0715/0715_JH.ipynb
@@ -108,7 +108,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 효율성 테스트 떨어져서 검색 후 동적계획법으로 풀어야 한다는 것 파악하고 다시 풀음.\n",
+    "\n",
+    "def solution(board):\n",
+    "    ch = [[0]*len(board[0]) for _ in range(len(board))]\n",
+    "    ch[0] = board[0]\n",
+    "    for k in range(len(board)):\n",
+    "        ch[k][0] = board[k][0]\n",
+    "    \n",
+    "    for i in range(1, len(board)):\n",
+    "        for j in range(1, len(board[0])):\n",
+    "            if board[i][j] == 1:\n",
+    "                ch[i][j] = min(ch[i-1][j-1], ch[i-1][j], ch[i][j-1]) + 1\n",
+    "                    \n",
+    "    ans = 0\n",
+    "    for i in range(len(board)):\n",
+    "        for j in range(len(board[0])):\n",
+    "            if ans < ch[i][j]:\n",
+    "                ans = ch[i][j]\n",
+    "                \n",
+    "    return ans**2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +171,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(s):\n",
+    "    stack = []\n",
+    "    for x in s:\n",
+    "        if len(stack) == 0:\n",
+    "            stack.append(x)\n",
+    "        else:\n",
+    "            if x == ')':\n",
+    "                if stack[-1] == '(':\n",
+    "                    stack.pop()\n",
+    "                else:\n",
+    "                    stack.append(x)\n",
+    "            else:\n",
+    "                stack.append(x)\n",
+    "    if len(stack) == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,7 +231,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n):\n",
+    "    num = bin(n)\n",
+    "    m = num.count(\"1\")\n",
+    "    n += 1\n",
+    "    while bin(n).count(\"1\") != m:\n",
+    "        n += 1\n",
+    "    return n"
+   ]
   }
  ],
  "metadata": {
