--- a/0701/0701_종훈.ipynb
+++ b/0701/0701_종훈.ipynb
@@ -224,6 +224,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(w,h):\n",
+    "    w1=w \n",
+    "    h1=h\n",
+    "    while(w1!=h1):#유클리드 호제법\n",
+    "        if w1>h1:#W1이 더크면 w1에서 h1을 빼준다\n",
+    "            w1-=h1\n",
+    "        else:   #h1이 더크면 반대\n",
+    "            h1-=w1\n",
+    "    \n",
+    "    return w*h-(w+h-h1) #h1 이든 w1 이든 같음"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
