--- a/0701/0701_종훈.ipynb
+++ b/0701/0701_종훈.ipynb
@@ -525,6 +525,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(str1, str2):\n",
+    "    arr1 = []\n",
+    "    arr2 = []\n",
+    "    for i in range(len(str1)-1):\n",
+    "        if str1[i].isalpha() and str1[i+1].isalpha():\n",
+    "            arr1.append(str1[i:i+2].lower())\n",
+    "    \n",
+    "    for j in range(len(str2)-1):\n",
+    "        if str2[j].isalpha() and str2[j+1].isalpha():\n",
+    "            arr2.append(str2[j:j+2].lower())\n",
+    "\n",
+    "    a = list(set(arr1) & set(arr2)) # 교집합\n",
+    "    b = list(set(arr1) | set(arr2)) # 합집합\n",
+    "\n",
+    "    aa = sum([min(arr1.count(x), arr2.count(x)) for x in a])\n",
+    "    bb = sum([max(arr1.count(x), arr2.count(x)) for x in b])\n",
+    "    \n",
+    "    if aa == 0 and bb == 0:\n",
+    "        return 65536\n",
+    "    else:\n",
+    "        return int(aa/bb*65536)\n",
+    "\n",
+    "\n",
+    "## 정규표현식 쓴것\n",
+    "import re\n",
+    "import math\n",
+    "\n",
+    "def solution(str1, str2):\n",
+    "    str1 = [str1[i:i+2].lower() for i in range(0, len(str1)-1) if not re.findall('[^a-zA-Z]+', str1[i:i+2])]\n",
+    "    str2 = [str2[i:i+2].lower() for i in range(0, len(str2)-1) if not re.findall('[^a-zA-Z]+', str2[i:i+2])]\n",
+    "\n",
+    "    gyo = set(str1) & set(str2)\n",
+    "    hap = set(str1) | set(str2)\n",
+    "\n",
+    "    if len(hap) == 0 :\n",
+    "        return 65536\n",
+    "\n",
+    "    gyo_sum = sum([min(str1.count(gg), str2.count(gg)) for gg in gyo])\n",
+    "    hap_sum = sum([max(str1.count(hh), str2.count(hh)) for hh in hap])\n",
+    "\n",
+    "    return math.floor((gyo_sum/hap_sum)*65536)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -632,7 +681,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(n,a,b):\n",
+    "    answer = 0\n",
+    "    while True:\n",
+    "        q, r = divmod(a, 2)\n",
+    "        a = q+r\n",
+    "        q, r = divmod(b, 2)\n",
+    "        b = q+r\n",
+    "        answer += 1\n",
+    "        if a == b:\n",
+    "            break\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
