--- a/0708/0708_JH.ipynb
+++ b/0708/0708_JH.ipynb
@@ -511,7 +511,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "def solution(skill, skill_trees):\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    for s in skill_trees:\n",
+    "        dq = deque(skill)\n",
+    "        for x in s:\n",
+    "            if x in dq:\n",
+    "                if x != dq.popleft():\n",
+    "                    break\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "    \n",
+    "    return cnt"
+   ]
   }
  ],
  "metadata": {
