--- a/0708/0708_JH.ipynb
+++ b/0708/0708_JH.ipynb
@@ -67,7 +67,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    bridge = deque([0]*bridge_length)\n",
+    "    truck_weights = deque(truck_weights)\n",
+    "    bridge_weight = 0\n",
+    "    cnt = 0\n",
+    "    while True:\n",
+    "        bridge_weight -= bridge.popleft()\n",
+    "        if truck_weights and bridge_weight+truck_weights[0] <= weight:\n",
+    "            cnt += 1\n",
+    "            bridge_weight += truck_weights[0]\n",
+    "            bridge.append(truck_weights.popleft())\n",
+    "        elif truck_weights and bridge_weight+truck_weights[0] > weight:\n",
+    "            cnt += 1\n",
+    "            bridge.append(0)\n",
+    "        elif len(truck_weights) == 0:\n",
+    "            cnt += 1\n",
+    "            bridge.append(0)\n",
+    "        \n",
+    "        if bridge_weight == 0 and len(truck_weights) == 0:\n",
+    "            break\n",
+    "    return cnt"
+   ]
   },
   {
    "cell_type": "markdown",
