--- a/0819/DH.ipynb
+++ b/0819/DH.ipynb
@@ -123,10 +123,103 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "class ftn:\r\n",
+    "    def __init__(self):\r\n",
+    "        self.dic = {}\r\n",
+    "    def poss(self,x,y,a):\r\n",
+    "        if a:#보\r\n",
+    "            if (x,y-1,0) in self.dic or (x+1,y-1,0) in self.dic or ((x-1,y,1) in self.dic and (x+1,y,1) in self.dic) :\r\n",
+    "                return True\r\n",
+    "            else:\r\n",
+    "                return False\r\n",
+    "        else :#기둥\r\n",
+    "            if y == 0 or (x,y-1,0) in self.dic or (x-1,y,1) in self.dic or (x,y,1) in self.dic:\r\n",
+    "                return True\r\n",
+    "            else:\r\n",
+    "                return False\r\n",
+    "def solution(n, build_frame):\r\n",
+    "    sol = ftn()\r\n",
+    "    for bu in build_frame:\r\n",
+    "        x,y,a,b = bu\r\n",
+    "        if b:\r\n",
+    "            if sol.poss(x,y,a):\r\n",
+    "                sol.dic[(x,y,a)] = True\r\n",
+    "        else:\r\n",
+    "            del sol.dic[(x,y,a)]\r\n",
+    "            for q,w,e in sol.dic.keys():\r\n",
+    "                if sol.poss(q,w,e):\r\n",
+    "                    continue\r\n",
+    "                else:\r\n",
+    "                    sol.dic[(x,y,a)] = True\r\n",
+    "                    break\r\n",
+    "    return sorted(sol.dic.keys(),key = lambda x:(x[0],x[1],x[2]))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "길 찾기 게임"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "source": [
+    "import sys\r\n",
+    "sys.setrecursionlimit(10**8)\r\n",
+    "\r\n",
+    "class Node:\r\n",
+    "    def __init__(self):\r\n",
+    "        self.node = None\r\n",
+    "        self.left = None\r\n",
+    "        self.right = None\r\n",
+    "        \r\n",
+    "class ftn:\r\n",
+    "    def __init__(self):\r\n",
+    "        self.tree = None\r\n",
+    "        \r\n",
+    "    def insert(self,arr):\r\n",
+    "        if self.tree == None:\r\n",
+    "            self.tree = Node()\r\n",
+    "        cur_tree = self.tree\r\n",
+    "        while 1:\r\n",
+    "            if cur_tree.node == None:\r\n",
+    "                cur_tree.node = arr\r\n",
+    "                return\r\n",
+    "            else:\r\n",
+    "                if cur_tree.node[0] > arr[0]:\r\n",
+    "                    if cur_tree.left == None:\r\n",
+    "                        cur_tree.left = Node()\r\n",
+    "                    cur_tree = cur_tree.left\r\n",
+    "                else:\r\n",
+    "                    if cur_tree.right == None:\r\n",
+    "                        cur_tree.right = Node()\r\n",
+    "                    cur_tree = cur_tree.right\r\n",
+    "    def ans(self,tree,direct):\r\n",
+    "        l=r=[]\r\n",
+    "        if tree.left != None:\r\n",
+    "            l = self.ans(tree.left,direct)\r\n",
+    "        if tree.right != None:\r\n",
+    "            r = self.ans(tree.right,direct)\r\n",
+    "        if direct == -1:\r\n",
+    "            return l + r + [tree.node[-1]] \r\n",
+    "        else:\r\n",
+    "            return [tree.node[-1]] + l + r \r\n",
+    "        \r\n",
+    "def solution(nodeinfo):\r\n",
+    "    infos = sorted([(x,y,idx+1) for idx,(x,y) in enumerate(nodeinfo)],key = lambda x:(-x[1],x[0]))\r\n",
+    "    Tree = ftn()\r\n",
+    "    for info in infos:\r\n",
+    "        Tree.insert(info)\r\n",
+    "    return [Tree.ans(Tree.tree,0),Tree.ans(Tree.tree,-1)]"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -137,10 +230,84 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 140,
+   "source": [
+    "def to_second(ch):\r\n",
+    "    a,b,c = map(int,ch.split(\":\"))\r\n",
+    "    return a * 3600 + b * 60 + c\r\n",
+    "\r\n",
+    "def to_hhmmss(i):\r\n",
+    "    h,i = divmod(i,3600)\r\n",
+    "    m,s = divmod(i,60)\r\n",
+    "    return '{:02d}:{:02d}:{:02d}'.format(h, m, s)\r\n",
+    "\r\n",
+    "def solution(play_time, adv_time, logs):\r\n",
+    "    play_time,adv_time = to_second(play_time),to_second(adv_time)\r\n",
+    "    arr = [0] * (play_time + 1)    \r\n",
+    "    \r\n",
+    "    for lg in logs:\r\n",
+    "        s,e = map(to_second,lg.split(\"-\"))\r\n",
+    "        arr[s] += 1;arr[e] -= 1\r\n",
+    "    \r\n",
+    "    for i in range(1,play_time+1):\r\n",
+    "        arr[i] = arr[i] + arr[i-1]\r\n",
+    "    tmp = sum(arr[:adv_time])\r\n",
+    "    ans = (0,tmp)\r\n",
+    "\r\n",
+    "    for st in range(0,play_time-adv_time):\r\n",
+    "        tmp += arr[st+adv_time]\r\n",
+    "        tmp -= arr[st]        \r\n",
+    "        if tmp > ans[1]:\r\n",
+    "            ans = (st+1,tmp)\r\n",
+    "\r\n",
+    "    return to_hhmmss(ans[0])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
-    "모두 0으로 만들기"
+    "모두 0으로 만들기\r\n",
+    "\r\n",
+    "leaf로 가서 바로 위 노드(p) cost에 현재 노드(n) cost를 더함"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "import sys\r\n",
+    "from collections import defaultdict\r\n",
+    "sys.setrecursionlimit(10**8)\r\n",
+    "\r\n",
+    "class ftn:\r\n",
+    "    def __init__(self,a,edges):\r\n",
+    "        self.cost = a\r\n",
+    "        self.dic = defaultdict(list)\r\n",
+    "        for s,e in edges:\r\n",
+    "            self.dic[s].append(e)\r\n",
+    "            self.dic[e].append(s)\r\n",
+    "        self.ans = 0\r\n",
+    "        \r\n",
+    "    def dfs(self,p,n):\r\n",
+    "        for v in self.dic[n]:\r\n",
+    "            if v != p:\r\n",
+    "                self.dfs(n,v)\r\n",
+    "        self.cost[p] += self.cost[n]\r\n",
+    "        self.ans += abs(self.cost[n])\r\n",
+    "        self.cost[n] = 0\r\n",
+    "\r\n",
+    "def solution(a, edges):\r\n",
+    "    if sum(a) != 0:\r\n",
+    "        return -1\r\n",
+    "    sol = ftn(a,edges)\r\n",
+    "    sol.dfs(0,0)\r\n",
+    "    return sol.ans"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
